syntax = "proto3";

package example;

import "seaorm/options.proto";
import "google/protobuf/timestamp.proto";

// User entity with one-to-many relationship to posts
message User {
  option (seaorm.model) = {
    table_name: "users"
    relations: [
      {name: "posts", type: RELATION_TYPE_HAS_MANY, related: "post", foreign_key: "author_id"}
    ]
  };

  int64 id = 1 [(seaorm.column) = { primary_key: true, auto_increment: true }];
  string email = 2 [(seaorm.column).unique = true];
  string name = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// Post entity with many-to-one relationship to user
message Post {
  option (seaorm.model) = {
    table_name: "posts"
    relations: [
      {name: "author", type: RELATION_TYPE_BELONGS_TO, related: "user", foreign_key: "author_id"}
    ]
  };

  int64 id = 1 [(seaorm.column) = { primary_key: true, auto_increment: true }];
  string title = 2;
  string content = 3;
  int64 author_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

// Request/Response messages for Users service
message GetUserRequest {
  int64 id = 1;
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
}

// Storage trait for user operations
service Users {
  option (seaorm.service) = {
    generate_storage: true
  };

  rpc GetUser(GetUserRequest) returns (User);
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}
